Implementing grouping between multiple elements

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,7 @@
 {
   "labels": {
+    "groupElements": "Group Elements",
+    "ungroupElements": "Ungroup Elements",
     "paste": "Paste",
     "selectAll": "Select All",
     "copy": "Copy",
