--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,7 +15,7 @@
     "fill": "Fill",
     "strokeWidth": "Stroke Width",
     "sloppiness": "Sloppiness",
-    "oppacity": "Oppacity",
+    "oppacity": "Opacity",
     "fontSize": "Font Size",
     "fontFamily": "Font Family",
     "onlySelected": "Only selected",
