--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -29,6 +29,7 @@
     "export": "Export",
     "exportToPng": "Export to PNG",
     "copyToClipboard": "Copy to clipboard",
+    "getShareableLink": "Get shareable link",
     "save": "Save",
     "load": "Load"
   },
