--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -1,66 +1,66 @@
 {
-  "labels": {
-    "paste": "Coller",
-    "selectAll": "Tout sélectionner",
-    "copy": "Copier",
-    "bringForward": "Mettre en avant",
-    "sendToBack": "Mettre en arrière-plan",
-    "bringToFront": "Mettre au premier plan",
-    "sendBackward": "Mettre en arrière",
-    "delete": "Supprimer",
-    "copyStyles": "Copier les styles",
-    "pasteStyles": "Coller les styles",
-    "stroke": "Contour",
-    "background": "Arrière-plan",
-    "fill": "Remplissage",
-    "strokeWidth": "Épaisseur contour",
-    "sloppiness": "Laisser-aller",
-    "opacity": "Opacité",
-    "fontSize": "Taille police",
-    "fontFamily": "Police",
-    "onlySelected": "Uniquement la sélection",
-    "withBackground": "Avec arrière-plan",
-    "handDrawn": "Manuscrite",
-    "normal": "Normale",
-    "code": "Code",
-    "small": "Petit",
-    "medium": "Moyen",
-    "large": "Large",
-    "veryLarge": "Très Large",
-    "solid": "Solide",
-    "hachure": "Hachure",
-    "crossHatch": "Hachure croisée",
-    "thin": "Fin",
-    "bold": "Épais",
-    "extraBold": "Très épais",
-    "architect": "Architecte",
-    "artist": "Artiste",
-    "cartoonist": "Cartooniste"
+  "alerts": {
+    "cannotExportEmptyCanvas": "Impossible d'exporter un canvas vide.",
+    "clearReset": "L'intégralité du canvas va être effacé. Êtes-vous sur ?",
+    "copiedToClipboard": "Copié dans le presse-papier: {{url}}",
+    "couldNotCopyToClipboard": "Impossible de copier dans le presse-papier. Essayez d'utiliser le navigateur Chrome.",
+    "couldNotCreateShareableLink": "Impossible de créer un lien de partage.",
+    "importBackendFailed": "L'import depuis le backend a échoué."
   },
   "buttons": {
     "clearReset": "Effacer le canvas & réinitialiser la couleur d'arrière-plan",
+    "copyToClipboard": "Copier dans le presse-papier",
     "export": "Exporter",
     "exportToPng": "Exporter en PNG",
-    "copyToClipboard": "Copier dans le presse-papier",
-    "save": "Sauvegarder",
+    "getShareableLink": "Obtenir un lien de partage",
     "load": "Ouvrir",
-    "getShareableLink": "Obtenir un lien de partage"
+    "save": "Sauvegarder"
   },
-  "alerts": {
-    "clearReset": "L'intégralité du canvas va être effacé. Êtes-vous sur ?",
-    "couldNotCreateShareableLink": "Impossible de créer un lien de partage.",
-    "importBackendFailed": "L'import depuis le backend a échoué.",
-    "cannotExportEmptyCanvas": "Impossible d'exporter un canvas vide.",
-    "couldNotCopyToClipboard": "Impossible de copier dans le presse-papier. Essayez d'utiliser le navigateur Chrome.",
-    "copiedToClipboard": "Copié dans le presse-papier: {{url}}"
+  "labels": {
+    "architect": "Architecte",
+    "artist": "Artiste",
+    "background": "Arrière-plan",
+    "bold": "Épais",
+    "bringForward": "Mettre en avant",
+    "bringToFront": "Mettre au premier plan",
+    "cartoonist": "Cartooniste",
+    "code": "Code",
+    "copy": "Copier",
+    "copyStyles": "Copier les styles",
+    "crossHatch": "Hachure croisée",
+    "delete": "Supprimer",
+    "extraBold": "Très épais",
+    "fill": "Remplissage",
+    "fontFamily": "Police",
+    "fontSize": "Taille police",
+    "hachure": "Hachure",
+    "handDrawn": "Manuscrite",
+    "large": "Large",
+    "medium": "Moyen",
+    "normal": "Normale",
+    "onlySelected": "Uniquement la sélection",
+    "opacity": "Opacité",
+    "paste": "Coller",
+    "pasteStyles": "Coller les styles",
+    "selectAll": "Tout sélectionner",
+    "sendBackward": "Mettre en arrière",
+    "sendToBack": "Mettre en arrière-plan",
+    "sloppiness": "Laisser-aller",
+    "small": "Petit",
+    "solid": "Solide",
+    "stroke": "Contour",
+    "strokeWidth": "Épaisseur contour",
+    "thin": "Fin",
+    "veryLarge": "Très Large",
+    "withBackground": "Avec arrière-plan"
   },
   "toolBar": {
-    "selection": "Sélection",
-    "rectangle": "Rectangle",
+    "arrow": "Flèche",
     "diamond": "Losange",
     "ellipse": "Ellipse",
-    "arrow": "Flèche",
     "line": "Ligne",
+    "rectangle": "Rectangle",
+    "selection": "Sélection",
     "text": "Texte"
   }
 }
