--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -1,66 +1,66 @@
 {
-  "labels": {
-    "paste": "Colar",
-    "selectAll": "Selecionar tudo",
-    "copy": "Copiar",
-    "bringForward": "Passar para o primeiro plano",
-    "sendToBack": "Passar para trás",
-    "bringToFront": "Passar para frente",
-    "sendBackward": "Passar para o plano de fundo",
-    "delete": "Apagar",
-    "copyStyles": "Copiar os estilos",
-    "pasteStyles": "Colar os estilos",
-    "stroke": "Contornos",
-    "background": "Fundo",
-    "fill": "Preenchimento",
-    "strokeWidth": "Espessura dos contornos",
-    "sloppiness": "Desleixo",
-    "opacity": "Opacidade",
-    "fontSize": "Tamanho da fonte",
-    "fontFamily": "Fonte",
-    "onlySelected": "Somente a seleção",
-    "withBackground": "Com fundo",
-    "handDrawn": "Manuscrito",
-    "normal": "Normal",
-    "code": "Código",
-    "small": "Pequeno",
-    "medium": "Médio",
-    "large": "Grande",
-    "veryLarge": "Muito Grande",
-    "solid": "Sólido",
-    "hachure": "Eclosão",
-    "crossHatch": "Eclosão cruzada",
-    "thin": "Fino",
-    "bold": "Espesso",
-    "extraBold": "Muito espesso",
-    "architect": "Arquitecto",
-    "artist": "Artista",
-    "cartoonist": "Caricaturista"
+  "alerts": {
+    "cannotExportEmptyCanvas": "Não é possível exportar um canvas vazío.",
+    "clearReset": "O canvas inteiro será excluído. Tens a certeza?",
+    "copiedToClipboard": "Copiado no clipboard: {{url}}",
+    "couldNotCopyToClipboard": "Não foi possível copiar no clipboard. Experimente no navegador Chrome.",
+    "couldNotCreateShareableLink": "Não foi possível criar um link de partilha.",
+    "importBackendFailed": "O carregamento no servidor falhou."
   },
   "buttons": {
     "clearReset": "Limpar o canvas e redefinir a cor de fundo",
+    "copyToClipboard": "Copiar para o clipboard",
     "export": "Exportar",
     "exportToPng": "Exportar em PNG",
-    "copyToClipboard": "Copiar para o clipboard",
-    "save": "Guardar",
+    "getShareableLink": "Obter um link de partilha",
     "load": "Carregar",
-    "getShareableLink": "Obter um link de partilha"
+    "save": "Guardar"
   },
-  "alerts": {
-    "clearReset": "O canvas inteiro será excluído. Tens a certeza?",
-    "couldNotCreateShareableLink": "Não foi possível criar um link de partilha.",
-    "importBackendFailed": "O carregamento no servidor falhou.",
-    "cannotExportEmptyCanvas": "Não é possível exportar um canvas vazío.",
-    "couldNotCopyToClipboard": "Não foi possível copiar no clipboard. Experimente no navegador Chrome.",
-    "copiedToClipboard": "Copiado no clipboard: {{url}}"
+  "labels": {
+    "architect": "Arquitecto",
+    "artist": "Artista",
+    "background": "Fundo",
+    "bold": "Espesso",
+    "bringForward": "Passar para o primeiro plano",
+    "bringToFront": "Passar para frente",
+    "cartoonist": "Caricaturista",
+    "code": "Código",
+    "copy": "Copiar",
+    "copyStyles": "Copiar os estilos",
+    "crossHatch": "Eclosão cruzada",
+    "delete": "Apagar",
+    "extraBold": "Muito espesso",
+    "fill": "Preenchimento",
+    "fontFamily": "Fonte",
+    "fontSize": "Tamanho da fonte",
+    "hachure": "Eclosão",
+    "handDrawn": "Manuscrito",
+    "large": "Grande",
+    "medium": "Médio",
+    "normal": "Normal",
+    "onlySelected": "Somente a seleção",
+    "opacity": "Opacidade",
+    "paste": "Colar",
+    "pasteStyles": "Colar os estilos",
+    "selectAll": "Selecionar tudo",
+    "sendBackward": "Passar para o plano de fundo",
+    "sendToBack": "Passar para trás",
+    "sloppiness": "Desleixo",
+    "small": "Pequeno",
+    "solid": "Sólido",
+    "stroke": "Contornos",
+    "strokeWidth": "Espessura dos contornos",
+    "thin": "Fino",
+    "veryLarge": "Muito Grande",
+    "withBackground": "Com fundo"
   },
   "toolBar": {
-    "selection": "Seleção",
-    "rectangle": "Retângulo",
+    "arrow": "Flecha",
     "diamond": "Losango",
     "ellipse": "Elipse",
-    "arrow": "Flecha",
     "line": "Linha",
+    "rectangle": "Retângulo",
+    "selection": "Seleção",
     "text": "Texto"
   }
 }
