--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -53,7 +53,7 @@
     "cannotExportEmptyCanvas": "No se puede exportar un lienzo vació",
     "couldNotCopyToClipboard": "No se ha podido copiar al portapapeles, intente usar Chrome como navegador.",
     "copiedToClipboard": "Copiado en el portapapeles: {{url}}",
-    "shareableLink": "Enlace para compartir: {{url}}"
+    "shareableLink": "Enlace para compartir"
   },
   "toolBar": {
     "selection": "Selección",
