--- a/public/locales/de/translation.json
+++ b/public/locales/de/translation.json
@@ -1,66 +1,66 @@
 {
-  "labels": {
-    "paste": "Einfügen",
-    "selectAll": "Alle auswählen",
-    "copy": "Kopieren",
-    "bringForward": "Nach vorne",
-    "sendToBack": "In den Hintergrund",
-    "bringToFront": "In den Vordergrund",
-    "sendBackward": "Nach hinten",
-    "delete": "Löschen",
-    "copyStyles": "Stile kopieren",
-    "pasteStyles": "Stile einfügen",
-    "stroke": "Strich",
-    "background": "Hintergrund",
-    "fill": "Füllung",
-    "strokeWidth": "Strichstärke",
-    "sloppiness": "Sauberkeit",
-    "opacity": "Sichtbarkeit",
-    "fontSize": "Schriftgröße",
-    "fontFamily": "Schriftart",
-    "onlySelected": "Nur ausgewählte",
-    "withBackground": "Mit Hintergrund",
-    "handDrawn": "Handschrift",
-    "normal": "Normal",
-    "code": "Code",
-    "small": "Klein",
-    "medium": "Mittel",
-    "large": "Groß",
-    "veryLarge": "Sehr Groß",
-    "solid": "Solide",
-    "hachure": "Schraffiert",
-    "crossHatch": "Kreuzschraffiert",
-    "thin": "Dünn",
-    "bold": "Fett",
-    "extraBold": "Extra Fett",
-    "architect": "Architekt",
-    "artist": "Künstler",
-    "cartoonist": "Karikaturist"
+  "alerts": {
+    "cannotExportEmptyCanvas": "Leere Zeichenfläche kann nicht exportiert werden.",
+    "clearReset": "Dies wird die ganze Zeichenfläche löschen. Bist du dir sicher?",
+    "copiedToClipboard": "In Zwischenablage kopiert: {{url}}",
+    "couldNotCopyToClipboard": "Konnte nicht in die Zwischenablage kopieren. Versuch es mit dem Chrome Browser.",
+    "couldNotCreateShareableLink": "Konnte keinen teilbaren Link erstellen.",
+    "importBackendFailed": "Import vom Server ist fehlgeschlagen."
   },
   "buttons": {
     "clearReset": "Zeichenfläche löschen & Hintergrundfarbe zurücksetzen",
+    "copyToClipboard": "In die Zwischenablage kopieren",
     "export": "Export",
     "exportToPng": "Als PNG exportieren",
-    "copyToClipboard": "In die Zwischenablage kopieren",
-    "save": "Speichern",
+    "getShareableLink": "Teilbaren Link erhalten",
     "load": "Laden",
-    "getShareableLink": "Teilbaren Link erhalten"
+    "save": "Speichern"
   },
-  "alerts": {
-    "clearReset": "Dies wird die ganze Zeichenfläche löschen. Bist du dir sicher?",
-    "couldNotCreateShareableLink": "Konnte keinen teilbaren Link erstellen.",
-    "importBackendFailed": "Import vom Server ist fehlgeschlagen.",
-    "cannotExportEmptyCanvas": "Leere Zeichenfläche kann nicht exportiert werden.",
-    "couldNotCopyToClipboard": "Konnte nicht in die Zwischenablage kopieren. Versuch es mit dem Chrome Browser.",
-    "copiedToClipboard": "In Zwischenablage kopiert: {{url}}"
+  "labels": {
+    "architect": "Architekt",
+    "artist": "Künstler",
+    "background": "Hintergrund",
+    "bold": "Fett",
+    "bringForward": "Nach vorne",
+    "bringToFront": "In den Vordergrund",
+    "cartoonist": "Karikaturist",
+    "code": "Code",
+    "copy": "Kopieren",
+    "copyStyles": "Stile kopieren",
+    "crossHatch": "Kreuzschraffiert",
+    "delete": "Löschen",
+    "extraBold": "Extra Fett",
+    "fill": "Füllung",
+    "fontFamily": "Schriftart",
+    "fontSize": "Schriftgröße",
+    "hachure": "Schraffiert",
+    "handDrawn": "Handschrift",
+    "large": "Groß",
+    "medium": "Mittel",
+    "normal": "Normal",
+    "onlySelected": "Nur ausgewählte",
+    "opacity": "Sichtbarkeit",
+    "paste": "Einfügen",
+    "pasteStyles": "Stile einfügen",
+    "selectAll": "Alle auswählen",
+    "sendBackward": "Nach hinten",
+    "sendToBack": "In den Hintergrund",
+    "sloppiness": "Sauberkeit",
+    "small": "Klein",
+    "solid": "Solide",
+    "stroke": "Strich",
+    "strokeWidth": "Strichstärke",
+    "thin": "Dünn",
+    "veryLarge": "Sehr Groß",
+    "withBackground": "Mit Hintergrund"
   },
   "toolBar": {
-    "selection": "Auswahl",
-    "rectangle": "Rechteck",
+    "arrow": "Pfeil",
     "diamond": "Raute",
     "ellipse": "Ellipse",
-    "arrow": "Pfeil",
     "line": "Linie",
+    "rectangle": "Rechteck",
+    "selection": "Auswahl",
     "text": "Text"
   }
 }
