--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -38,7 +38,8 @@
     "cartoonist": "Cartoonist",
     "fileTitle": "File title",
     "colorPicker": "Color picker",
-    "canvasBackground": "Canvas background"
+    "canvasBackground": "Canvas background",
+    "loading": "Loading..."
   },
   "buttons": {
     "clearReset": "Clear the canvas & reset background color",
@@ -56,7 +57,8 @@
     "importBackendFailed": "Importing from backend failed.",
     "cannotExportEmptyCanvas": "Cannot export empty canvas.",
     "couldNotCopyToClipboard": "Couldn't copy to clipboard. Try using Chrome browser.",
-    "copiedToClipboard": "Copied to clipboard: {{url}}"
+    "copiedToClipboard": "Copied to clipboard: {{url}}",
+    "urlCopiedClipboardSuccess": "Link was copy to clipboard"
   },
   "toolBar": {
     "selection": "Selection",
