--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,7 +53,9 @@
     "close": "Close",
     "selectLanguage": "Select Language",
     "previouslyLoadedScenes": "Previously loaded scenes",
-    "scrollBackToContent": "Scroll back to content"
+    "scrollBackToContent": "Scroll back to content",
+    "zoomIn": "Zoom in",
+    "zoomOut": "Zoom out"
   },
   "alerts": {
     "clearReset": "This will clear the whole canvas. Are you sure?",
