--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -55,7 +55,8 @@
     "selectLanguage": "Select Language",
     "scrollBackToContent": "Scroll back to content",
     "zoomIn": "Zoom in",
-    "zoomOut": "Zoom out"
+    "zoomOut": "Zoom out",
+    "resetZoom": "Reset zoom"
   },
   "alerts": {
     "clearReset": "This will clear the whole canvas. Are you sure?",
