Fix label for edit button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -57,7 +57,8 @@
     "zoomIn": "Zoom in",
     "zoomOut": "Zoom out",
     "menu": "Menu",
-    "done": "Done"
+    "done": "Done",
+    "edit": "Edit"
   },
   "alerts": {
     "clearReset": "This will clear the whole canvas. Are you sure?",
