Add language selector on mobile

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,7 +40,8 @@
     "colorPicker": "Color picker",
     "canvasBackground": "Canvas background",
     "drawingCanvas": "Drawing Canvas",
-    "layers": "Layers"
+    "layers": "Layers",
+    "language": "Language"
   },
   "buttons": {
     "clearReset": "Reset the canvas",
