--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -57,7 +57,7 @@
     "scrollBackToContent": "Scroll back to content",
     "zoomIn": "Zoom in",
     "zoomOut": "Zoom out",
-    "resetZoom": "Reset zoom"
+    "resetZoom": "Reset zoom",
     "menu": "Menu",
     "done": "Done",
     "edit": "Edit"
