fix syncing bugs and add a button to start syncing mid session

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -45,6 +45,7 @@
   },
   "buttons": {
     "clearReset": "Reset the canvas",
+    "enableCollaboration": "Enable collaboration",
     "export": "Export",
     "exportToPng": "Export to PNG",
     "exportToSvg": "Export to SVG",
