initial RoomDialog prototype

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -41,7 +41,8 @@
     "canvasBackground": "Canvas background",
     "drawingCanvas": "Drawing Canvas",
     "layers": "Layers",
-    "language": "Language"
+    "language": "Language",
+    "createRoom": "Share a live-collaboration session"
   },
   "buttons": {
     "clearReset": "Reset the canvas",
@@ -62,7 +63,9 @@
     "done": "Done",
     "edit": "Edit",
     "undo": "Undo",
-    "redo": "Redo"
+    "redo": "Redo",
+    "roomDialog": "Share a live-collaboration session",
+    "createNewRoom": "Create new room"
   },
   "alerts": {
     "clearReset": "This will clear the whole canvas. Are you sure?",
@@ -105,5 +108,15 @@
     "errorStack": "Error stack trace:",
     "errorStack_loading": "Loading data. please wait...",
     "sceneContent": "Scene content:"
+  },
+  "roomDialog": {
+    "desc_intro": "You can create a session below to collaborate with anyone you want.",
+    "desc_privacy": "Don't worry, the session uses end-to-end encryption, so whatever you draw will stay private. Not even our server will be able to see what you come up with.",
+    "desc_start": "To begin, click the button below. (Will open a room in a new tab.)",
+    "button_startSession": "Start session",
+    "desc_inProgressIntro": "Live-collaboration session is now in progress.",
+    "desc_shareLink": "Share this link with anyone you want to collaborate with:",
+    "desc_exitSession": "To exit the session, simply close this tab. (Note that this won't prevent other people with the access to this link to still use the room.)",
+    "desc_createAnotherSession": "You can also create a new session:"
   }
 }
