--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -110,12 +110,14 @@
     "sceneContent": "Scene content:"
   },
   "roomDialog": {
-    "desc_intro": "You can create a session below to collaborate with anyone you want.",
+    "desc_intro": "You can invite people to your current scene to collaborate with you.",
     "desc_privacy": "Don't worry, the session uses end-to-end encryption, so whatever you draw will stay private. Not even our server will be able to see what you come up with.",
-    "desc_start": "To begin, click the button below. (Will open a room in a new tab.)",
+    "desc_start": "To begin, click the button below. (Will use the current scene. If you don't want this, you can manually clear it, first)",
     "button_startSession": "Start session",
+    "button_stopSession": "Stop session",
     "desc_inProgressIntro": "Live-collaboration session is now in progress.",
+    "desc_persistenceWarning": "Note that the scene data is shared across collaborators in a P2P fashion, and not persisted to our server. Thus, if all of you disconnect, you will loose the data unless you export it to a file or a shareable link.",
     "desc_shareLink": "Share this link with anyone you want to collaborate with:",
-    "desc_exitSession": "To exit the session, simply close this tab. (Note that this won't prevent other people with the access to this link to still use the room.)"
+    "desc_exitSession": "Stopping the session will disconnect your from the room, but you'll be able to continue working with the scene, locally. Note that this won't affect other people, and they'll still be able to collaborate on their version."
   }
 }
