Add copy to PNG option on context menu

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,6 +3,7 @@
     "paste": "Paste",
     "selectAll": "Select All",
     "copy": "Copy",
+    "copyToPng": "Copy to PNG",
     "bringForward": "Bring Forward",
     "sendToBack": "Send To Back",
     "bringToFront": "Bring To Front",
