--- a/src/locales/no.json
+++ b/src/locales/no.json
@@ -3,6 +3,7 @@
     "paste": "Lim inn",
     "selectAll": "Velg alt",
     "copy": "Kopier",
+    "copyToPng": "Kopier til PNG",
     "bringForward": "Flytt framover",
     "sendToBack": "Flytt bakover",
     "bringToFront": "Flytt forrest",
