--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -3,7 +3,7 @@
     "paste": "Paste",
     "selectAll": "Select All",
     "copy": "Copy",
-    "copyToPng": "Copy to PNG",
+    "copyAsPng": "Copy to clipboard as PNG",
     "bringForward": "Bring Forward",
     "sendToBack": "Send To Back",
     "bringToFront": "Bring To Front",
