--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -65,7 +65,7 @@
     "edit": "Edit",
     "undo": "Undo",
     "redo": "Redo",
-    "roomDialog": "Start collaborating live",
+    "roomDialog": "Start live collaboration",
     "createNewRoom": "Create new room"
   },
   "alerts": {
