Revert "revise other locales"
This reverts commit 22c93e10cc9a3b063819f3299f0284b5ab9b1f6c.

--- a/src/locales/id-ID.json
+++ b/src/locales/id-ID.json
@@ -105,7 +105,11 @@
     "clearCanvasMessage": "If reloading doesn't work, try ",
     "clearCanvasMessage_button": "clearing the canvas.",
     "clearCanvasCaveat": " This will result in loss of work ",
+    "openIssueMessage_pre": "Before doing so, we'd appreciate if you opened an issue on our ",
     "openIssueMessage_button": "bug tracker.",
+    "openIssueMessage_post": " Please include the following error stack trace (and if it's not private, also the scene content):",
+    "errorStack": "Error stack trace:",
+    "errorStack_loading": "Loading data. please wait...",
     "sceneContent": "Scene content:"
   },
   "roomDialog": {
