--- a/src/locales/zh-TW.json
+++ b/src/locales/zh-TW.json
@@ -105,7 +105,11 @@
     "clearCanvasMessage": "如果重載還是無法解決，嘗試 ",
     "clearCanvasMessage_button": "清理畫布",
     "clearCanvasCaveat": " 這會導致目前的進度遺失 ",
+    "openIssueMessage_pre": "Before doing so, we'd appreciate if you opened an issue on our ",
     "openIssueMessage_button": "bug tracker.",
+    "openIssueMessage_post": " Please include the following error stack trace (and if it's not private, also the scene content):",
+    "errorStack": "Error stack trace:",
+    "errorStack_loading": "資料讀取中，請稍候",
     "sceneContent": "場景內容"
   },
   "roomDialog": {
