--- a/src/locales/ko-KR.json
+++ b/src/locales/ko-KR.json
@@ -105,7 +105,11 @@
     "clearCanvasMessage": "If reloading doesn't work, try ",
     "clearCanvasMessage_button": "clearing the canvas.",
     "clearCanvasCaveat": " This will result in loss of work ",
+    "openIssueMessage_pre": "Before doing so, we'd appreciate if you opened an issue on our ",
     "openIssueMessage_button": "bug tracker.",
+    "openIssueMessage_post": " Please include the following error stack trace (and if it's not private, also the scene content):",
+    "errorStack": "Error stack trace:",
+    "errorStack_loading": "데이터를 불러오는 중입니다. 잠시만 기다려 주세요...",
     "sceneContent": "Scene content:"
   },
   "roomDialog": {
