--- a/src/locales/ru-RU.json
+++ b/src/locales/ru-RU.json
@@ -105,7 +105,11 @@
     "clearCanvasMessage": "Если перезагрузка страницы не помогла, попробуйте ",
     "clearCanvasMessage_button": "очистить холст.",
     "clearCanvasCaveat": " Текущая работа будет утеряна ",
+    "openIssueMessage_pre": "Перед тем как вы продолжите, мы будем признательны если вы откроете тикет в нашем ",
     "openIssueMessage_button": "баг трекере.",
+    "openIssueMessage_post": " Пожалуйста, приложите следующую трассировку стека (и контент сцены, если возможно):",
+    "errorStack": "Трассировка стека с ошибкой:",
+    "errorStack_loading": "Данные загружаются. Пожалуйста, подождите...",
     "sceneContent": "Содержание сцены:"
   },
   "roomDialog": {
