--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -97,7 +97,8 @@
   "hints": {
     "linearElement": "Click to start multiple points, drag for single line",
     "linearElementMulti": "Click on last point or press Escape or Enter to finish",
-    "resize": "You can constraint proportions by holding SHIFT while resizing"
+    "resize": "You can constraint proportions by holding SHIFT while resizing",
+    "rotate": "You can constraint angles by holding SHIFT while rotating"
   },
   "errorSplash": {
     "headingMain_pre": "Encountered an error. Try ",
