feat: add the ability to change the alignement of the text

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,6 +19,7 @@
     "opacity": "Opacity",
     "fontSize": "Font Size",
     "fontFamily": "Font Family",
+    "textAlign": "Text Align",
     "onlySelected": "Only selected",
     "withBackground": "With Background",
     "handDrawn": "Hand-Drawn",
@@ -33,6 +34,9 @@
     "crossHatch": "Cross-Hatch",
     "thin": "Thin",
     "bold": "Bold",
+    "left": "left",
+    "center": "center",
+    "right": "right",
     "extraBold": "Extra Bold",
     "architect": "Architect",
     "artist": "Artist",
