--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -69,7 +69,8 @@
     "undo": "Undo",
     "redo": "Redo",
     "roomDialog": "Start live collaboration",
-    "createNewRoom": "Create new room"
+    "createNewRoom": "Create new room",
+    "fullScreen": "Full Screen"
   },
   "alerts": {
     "clearReset": "This will clear the whole canvas. Are you sure?",
