style: make the text on the buttons start with uppercase

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,9 +34,9 @@
     "crossHatch": "Cross-Hatch",
     "thin": "Thin",
     "bold": "Bold",
-    "left": "left",
-    "center": "center",
-    "right": "right",
+    "left": "Left",
+    "center": "Center",
+    "right": "Right",
     "extraBold": "Extra Bold",
     "architect": "Architect",
     "artist": "Artist",
