--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -133,8 +133,8 @@
     "shapes": "Shapes",
     "editor": "Editor",
     "view": "View",
-    "blog": "Read the Blog",
-    "howto": "Check out the How To",
+    "blog": "Read our Blog",
+    "howto": "Follow our guides",
     "github": "Found an issue? Submit"
   }
 }
