--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -133,7 +133,7 @@
     "shapes": "Shapes",
     "editor": "Editor",
     "view": "View",
-    "blog": "Read our Blog",
+    "blog": "Read our blog",
     "howto": "Follow our guides",
     "github": "Found an issue? Submit"
   }
