--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -70,7 +70,7 @@
     "redo": "Redo",
     "roomDialog": "Start live collaboration",
     "createNewRoom": "Create new room",
-    "toggleFullScreen": "Toggle Full screen"
+    "toggleFullScreen": "Toggle full screen"
   },
   "alerts": {
     "clearReset": "This will clear the whole canvas. Are you sure?",
