Rename resetZoom to zoomReset for consistency

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,7 +63,7 @@
     "scrollBackToContent": "Scroll back to content",
     "zoomIn": "Zoom in",
     "zoomOut": "Zoom out",
-    "resetZoom": "Reset zoom",
+    "zoomReset": "Reset zoom",
     "menu": "Menu",
     "done": "Done",
     "edit": "Edit",
