--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -46,7 +46,7 @@
     "actions": "Actions",
     "language": "Language",
     "createRoom": "Share a live-collaboration session",
-    "duplicateSelection": "Duplicate selected elements"
+    "duplicateSelection": "Duplicate"
   },
   "buttons": {
     "clearReset": "Reset the canvas",
